# physicSim

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  LICENSE  README.md  atmosphere_simulation1.cpp  gmon.out
include/: bodies.h  body.h  consts.h  gl_utils.h  main.h  node.h  simulation.h  timer.h  tree.h  utils.h
legacy/: main.cpp
output/: counterM1.txt  counterM10.000000.txt  counterM10.txt  counterM15.txt  counterM20.000000.txt  counterM20.txt  counterM25.000000.txt  counterM25.txt  counterM30.txt  counterM35.000000.txt  counterM35.txt  counterM40.000000.txt  counterM40.txt  counterM45.txt  counterM5.000000.txt  counterM5.txt  counterM50.txt  counterM55.000000.txt  counterM55.txt  counterM60.000000.txt  counterM60.txt  counterM65.txt  counterM70.000000.txt  counterM70.txt  counterM75.txt  counterM80.000000.txt  counterM80.txt
output/step500/: counterM1.000000.txt  counterM15.000000.txt  counterM30.000000.txt  counterM45.000000.txt  counterM50.000000.txt  counterM65.000000.txt  counterM75.000000.txt
scripts/: img2gif.py  processTimeMass.py  sweepMass.sh
shaders/: bg_fragment.glsl  bg_vertex.glsl  fragment.glsl  vertex.glsl
src/: gl_utils.cpp  main.cpp  simulation.cpp  tree.cpp  utils.cpp
